fix others flex add align-item start

--- a/styles/breakpoints/_base.scss
+++ b/styles/breakpoints/_base.scss
@@ -262,11 +262,14 @@ body {
 		&.row3 {
 			& > img {
 				width: 100%;
+				height: 100%;
 			}
 		}
 		&.row2 {
 			display: flex;
 			justify-content: space-between;
+			//スマホ版だと縦に画像が伸びてしまう。改善するために設定
+			align-items: flex-start;
 			& > img {
 				width: 40%;
 				height: 250px;
