--- a/styles/style.css
+++ b/styles/style.css
@@ -490,6 +490,7 @@ body {
 
 .others__row.row1 > img, .others__row.row3 > img {
   width: 100%;
+  height: 100%;
 }
 
 .others__row.row2 {
@@ -499,6 +500,9 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .others__row.row2 > img {
